# quiz-game

./: .env.example  .gitignore  pyproject.toml
src/: main.py
src/api/: authentication.py  questions.py  user.py
src/core/: config.py  database.py
src/docs/: architecture.md
src/models/: __init__.py  achievements.py  analytics.py  authentication.py  challenges.py  leaderboards.py  levels.py  multiplayer.py  questions.py  user.py  user_data.py
src/schemas/: authentication.py  questions.py  user.py
src/utils/: db.py  email_send.py  enums.py  generate_otp.py  get_current_user.py  hash_password.py
