[project]
name = "quiz-game"
version = "0.1.0"
description = "Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "bcrypt==4.0.1",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pytest>=8.4.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "types-passlib>=1.7.7.20250602",
    "uvicorn[standard]>=0.34.3",
]
